test_regress/t/t_class_uses_this_bad.out
%Error: t/t_class_uses_this_bad.v:28:12: 'this' used outside class
   28 |        this.addr = 2;
      |            ^
%Error: Exiting due to
